src/styles/view-controls.scss
@import './variables.scss';

%dropdown-toggle-highlight {
    background-color: #fff !important;
    border: 1px solid $border-colour-one;
}

%dropdown-menu-highlight {
    &:before {
        position: absolute;
        top: 0;
        left: -1px;
        width: 6px;
        height: 100%;

        content: '';
        background-color: $wet-primary-colour;
    }
}

.cip-view-controls {
    border-top: 3px solid $border-colour-two;

    .cip-controls {
        display: flex;
        align-items: center;

        height: $view-controls-height;

        .separator {
            flex: 1;
        }
    }

    .b-dropdown {
        /deep/ {
            .dropdown-toggle {
                display: flex;
                align-items: center;

                border: none;
                height: $view-controls-height;
                padding: 0.25em 1.5em;
                background-color: transparent;

                border: 1px solid transparent;

                &:hover,
                &:focus {
                    @extend %dropdown-toggle-highlight;
                }

                &:after {
                    margin-left: 3rem;
                }
            }

            .dropdown-menu {
                margin-top: -1px;

                border: 1px solid $border-colour-one;
                box-shadow: none;

                min-width: 400px;

                @extend %dropdown-menu-highlight;
            }
        }

        &.show /deep/ {
            .dropdown-toggle {
                @extend %dropdown-toggle-highlight;
                @extend %dropdown-menu-highlight;
            }
        }

        &.cip-dropdown-right.show /deep/ {
            .dropdown-menu {
                // for some reason the right-aligned menu is offset to the left by one extra pixel
                margin-right: -1px;

                &:before {
                    right: -1px;
                    left: auto;
                }
            }

            .dropdown-toggle:before {
                right: -1px;
                left: auto;
            }
        }

        .dropdown-item {
            &.cip-selected {
                background-color: $wet-primary-colour;
                color: white;
            }
        }

        a.dropdown-item {
            text-decoration: none;
        }

        .dropdown-divider {
            border-right: 1px solid #e9ecef;
            height: auto;
            margin: 0.5rem;
        }

        .cip-content-wrap {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
        }

        .cip-value-label {
            font-size: 0.8em;
            line-height: 1.3em;
        }

        .cip-selected-value {
            font-size: 0.9em;
            font-weight: bold;
            line-height: 1.3em;
        }

        .cip-dropdown-multi-item {
            display: flex;
            align-items: center;
            padding: 0 1.5em;

            span {
                flex: 1 0 auto;
                white-space: nowrap;
                margin-right: 4rem;
            }

            &-options {
                display: flex;
                flex-wrap: wrap;
                justify-content: flex-end;
                align-items: center;
                width: 14rem;

                .dropdown-item {
                    width: calc(50% - 1rem);
                    border: 1px solid #ccc;
                    font-size: 0.9em;
                    color: #444;

                    padding-left: 0;
                    padding-right: 0;

                    text-align: center;

                    width: auto;

                    &:first-child:nth-last-child(1) {
                        width: 100%;
                    }

                    margin: 0.5rem;
                    width: calc(50% - 1rem);

                    &.cip-selected,
                    &:active {
                        color: #fff;
                    }

                    // if you need to specify custom width based on the number of elements, it can be done this way
                    /* &:first-child:nth-last-child(2),
                    &:first-child:nth-last-child(2) ~ .dropdown-item {
                        width: 50%;
                    } */
                }
            }
        }

        .cip-dropdown-info {
        }

        .cip-dropdown-description {
            padding: 0.25rem * 1.6 1.5rem * 1.6;
            font-size: 0.8em;
        }
    }

    .cip-selector {
        .dropdown-item {
            display: flex;
            align-items: center;
        }

        .cip-name {
            flex: 1;
            margin-right: 3rem;
        }

        .cip-short-name {
            font-size: 0.7em;
            font-weight: 100;
        }

        .cip-qualifier {
            font-size: 0.7em;
            font-weight: 100;
        }

        &.cip-horizontal {
            .cip-dropdown-content {
                display: flex;

                > [role='group'] {
                    flex: 1;
                }
            }
        }
    }

    // force-show view controls in medium and large layouts
    @media (min-width: 990px) {
        .cip-controls-wrapper {
            display: block !important;
        }
    }

    // flatten view controls and display them as stacked on small and extra small layouts
    @media (max-width: 991px) {
        border: none;

        // "settings" button which shows/collapses selectors on the small layouts
        .cip-controls-toggle {
            width: 100%;
            border-radius: 0;
            padding: 0.8em calc(1.25em + 1rem);

            display: flex;
            align-items: center;

            .cip-label {
                margin-left: 1.4rem;
                text-align: left;
                flex: 1;
            }
        }

        .cip-controls {
            flex-direction: column;
            align-items: stretch;
            height: auto;

            padding: 10px;

            .menu-option {
                margin: 0rem 0;
            }

            .b-dropdown /deep/ {
                width: 100%;

                .dropdown-toggle {
                    width: 100%;
                }

                .cip-content-wrap {
                    flex: 1;
                }

                .dropdown-menu {
                    position: relative !important;
                    transform: none !important;

                    margin-right: 0px !important;

                    max-width: 100% !important;
                }
            }
        }

        .cip-selector {
            .cip-name {
                text-overflow: ellipsis;
                overflow: hidden;
            }

            // forces vertical stacking for selector groups on small layouts
            &.cip-horizontal {
                .cip-dropdown-content {
                    flex-direction: column;
                }
            }
        }
    }
}

